# tacit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
notebooks/: 1_TACIT_maze_data_generator.ipynb  2_TACIT_maze_training.ipynb  TACIT_maze_data_generator.ipynb
paper_data/: README.md  architecture_diagram_prompt.md
paper_data/reports/: bibliography_verification.md  citation_context_verification.md  phase_transition_analysis.md  philosophical_synthesis.md  spatial_emergence_analysis.md  training_summary.md
paper_data/test_mazes/: maze_0000_input.npy  maze_0000_solution.npy  maze_0001_input.npy  maze_0001_solution.npy  maze_0002_input.npy  maze_0002_solution.npy  maze_0003_input.npy  maze_0003_solution.npy  maze_0004_input.npy  maze_0004_solution.npy  maze_0005_input.npy  maze_0005_solution.npy  maze_0006_input.npy  maze_0006_solution.npy  maze_0007_input.npy  maze_0007_solution.npy  maze_0008_input.npy  maze_0008_solution.npy  maze_0009_input.npy  maze_0009_solution.npy  maze_0010_input.npy  maze_0010_solution.npy  maze_0011_input.npy  maze_0011_solution.npy  maze_0012_input.npy  maze_0012_solution.npy  maze_0013_input.npy  maze_0013_solution.npy  maze_0014_input.npy  maze_0014_solution.npy  maze_0015_input.npy  maze_0015_solution.npy  maze_0016_input.npy  maze_0016_solution.npy  (+7 more)
paper_draft/: Makefile  README.md  main.tex
scripts/: analyze_emergence.py  analyze_spatial.py  compare_step_counts.py  evaluate.py  generate_data.py  generate_paper_figures.py  generate_step_by_step.py  generate_test_mazes.py  sample.py  train.py
tacit/: __init__.py
(+21 files in other folders)
